--- a/stylesheet.css
+++ b/stylesheet.css
@@ -259,7 +259,7 @@ i
 }
 
 .winners p {
-  padding: 0 2px 0 2px;
+  padding: 0 2px 3px 2px;
   margin: 0;
   font-weight: 600;
 }
@@ -280,4 +280,34 @@ i
 
 .btn-winner-avatars:hover {
   border: 0.175rem solid rgba(250, 204, 21, 1);
+}
+
+.sharp {
+  image-rendering: optimizeSpeed;             /* STOP SMOOTHING, GIVE ME SPEED  */
+  image-rendering: -moz-crisp-edges;          /* Firefox                        */
+  image-rendering: -o-crisp-edges;            /* Opera                          */
+  image-rendering: -webkit-optimize-contrast; /* Chrome (and eventually Safari) */
+  image-rendering: pixelated; /* Chrome */
+  image-rendering: optimize-contrast;         /* CSS3 Proposed                  */
+  -ms-interpolation-mode: nearest-neighbor;   /* IE8+                           */  
+}
+
+.teams {
+  padding: 0 0 0 0.25rem;
+  margin: 0.25rem 0 0 0;
+  width: fit-content;
+}
+
+.teams p {
+  font-weight: 600;
+}
+
+.team-avatars {
+  padding: 0;
+  margin: 0;
+}
+
+.team-icons {
+  width: 38px;
+  image-rendering: pixelated;
 }
