--- a/stylesheet.css
+++ b/stylesheet.css
@@ -311,3 +311,15 @@ i
   width: 38px;
   image-rendering: pixelated;
 }
+
+.rules-li {
+  border-radius: 0.375rem;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  background-color: rgb(13, 14, 15);
+}
+
+.rules-num {
+  background-color: rgb(24, 26, 27);
+  @apply rounded-full font-bold text-sm w-8 h-8 flex items-center justify-center;
+}
