--- a/stylesheet.css
+++ b/stylesheet.css
@@ -323,3 +323,7 @@ i
   background-color: rgb(24, 26, 27);
   @apply rounded-full font-bold text-sm w-8 h-8 flex items-center justify-center;
 }
+
+#event {
+  padding: 0 12rem 0 12rem;
+}
