--- a/stylesheet.css
+++ b/stylesheet.css
@@ -324,6 +324,77 @@ i
   @apply rounded-full font-bold text-sm w-8 h-8 flex items-center justify-center;
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.pb-1 {
+  padding-bottom: 0.25rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
+.pt-1 {
+  padding-top: 0.25rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pl-4 {
+  padding-left: 1rem;
+}
+
+.basis-8 {
+  flex-basis: 2rem;
+}
+
+.flex-none {
+  flex: none;
+}
+
+.mx-12 {
+  margin-left: 3rem;
+  margin-right: 3rem;
+}
+
+.underline {
+  text-decoration: underline;
+}
+
+.underline-offset-1 {
+  text-underline-offset: 1px;
+}
+
+.font-extrabold {
+  font-weight: 800;
+}
+
 #event {
   padding: 0 12rem 0 12rem;
 }
