Google Form Embed

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,7 +21,6 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #eab308; 
 }
-i
 
 .hover\:shadow-video-custom:hover {
   box-shadow: 0 0 30px rgba(255, 215, 0, 0.6);
@@ -383,6 +382,10 @@ i
   margin-right: 3rem;
 }
 
+.mb-8 {
+  margin-bottom: 32px;
+}
+
 .underline {
   text-decoration: underline;
 }
@@ -401,4 +404,61 @@ i
 
 #faq {
   padding: 0 12rem 0 12rem;
+}
+
+.form {
+  box-sizing: border-box;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+form {
+  background: rgb(13, 14, 15);
+  padding: 60px;
+  width: 550px;
+  max-width: calc(100% - 60px);
+}
+
+.form-element {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+}
+
+.form-element span {
+  margin-bottom: 10px;
+}
+
+form textarea {
+  min-height: 108px;
+}
+
+input, textarea {
+  border: 1px solid #B3FFCD;
+  line-height: 2;
+  padding: 5px 5px 5px 10px;
+  border-radius: 1px;
+  background-color: #0d0e0f;
+}
+
+.duration-350 {
+  transition-duration: 350ms;
+}
+
+.submit-btn-green {
+  color: #458A5D;
+  background-color: #B3FFCD;
+  box-shadow: 0 5px #80D69E;
+  border-color: #99ffbd;
+
+  @apply inline-block border py-2 px-3 uppercase font-extrabold transition-opacity duration-150 ease-in-out mt-3 cursor-pointer;
+}
+
+.submit-btn-purple {
+  color: #6C3E85;
+  background-color: #E2ABFF;
+  box-shadow: 0 5px #AD63D6;
+  border-color: #cf76ff;
 }
