--- a/stylesheet.css
+++ b/stylesheet.css
@@ -488,10 +488,10 @@ input, textarea {
 }
 
 .back-btn {
-  color: #905c0f;
-  background-color: #facc15;
-  box-shadow: 0 5px #eab308;
-  border-color: #e7a428;
+  color: #6C3E85;
+  background-color: #E2ABFF;
+  box-shadow: 0 5px #AD63D6;
+  border-color: #cf76ff;
   margin-top: 2rem;
 
   @apply inline-block border py-2 px-12 uppercase font-extrabold transition-opacity duration-150 ease-in-out cursor-pointer;
